name:                rot13server
version:             0.0.1
synopsis:            "Encrypts" text using rot13
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Marcus McCurdy
maintainer:          marcus.mccurdy@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable rot13server
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base 
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , monad-logger
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
